--- a/.gitignore
+++ b/.gitignore
@@ -55,5 +55,4 @@ build-iPhoneSimulator/
 # Used by RuboCop. Remote config files pulled in from inherit_from directive.
 # .rubocop-https?--*
 
-/app/assets/builds/*
-!/app/assets/builds/.keep
+node_modules/
