--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "esbuild": "^0.14.43",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-dom-confetti": "^0.2.0",
     "remount": "^0.11.0"
   },
   "scripts": {
